[package]
name = "api-users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
cucumber = "0.19.1"

[[test]]
name = "readme"
harness = false  # allows Cucumber to print output instead of libtest